# frankenst-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-pypi.md  README.md  SECURITY.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements-examples-azure.txt  requirements-examples-ollama.txt  requirements-examples.txt  requirements-frankstate-core.txt  requirements.txt  runnable.ipynb  todos.txt
.ado-pipelines/: cicd-deploy-function-app.yml  config-variables.yml  function-app-pipeline-cicd.yml
.ado-pipelines/templates/: build-and-deploy-webapp-container.yml  build-and-push-acr.yml  deploy-function-app-container.yml  deploy-function-app-image-acr.yml  deploy-webapp-container.yml  function-app-container-registry.yml  function-app-for-acr.yml  function-app-to-acr.yml  install-az-cli.yml  python-script.yml  webapp-container-deploy.yml  webapp-container-to-acr.yml
.github/workflows/: release.yml
research/: demo.ipynb  demo_autogen_core_langgraph.ipynb  demo_autogen_semantic_kernel_langgraph.ipynb  demo_base_agent.ipynb  demo_graphs_comunication_mpc_tools.ipynb  demo_human_in_the_loop.ipynb  demo_langgraph_platform.ipynb  demo_unstructured_adaptative_rag.ipynb  demo_unstructured_adaptive_rag.ipynb  oaklang_agent_test.ipynb  rag.ipynb  runnable.ipynb  test.ipynb  trials.ipynb
src/core/config/: config.yml  config_nodes.yml
src/core/config/layouts/: adaptative_rag_config_graph.py  ai_search_adaptative_rag_config_graph.py  ai_search_adaptive_rag_config_graph.py  local_vectorstore_adaptative_rag_config_graph.py  local_vectorstore_adaptive_rag_config_graph.py  oak_human_loop_config_graph.py  simple_oak_config_graph.py
src/core/constants/: __init__.py
src/core/models/basetools/: mcpfunctionstoolpropety.py
src/core/models/stategraph/: ragstategraph.py  stategraph.py
src/core/utils/: blob_storage.py  common.py  key_vault.py  logger.py
src/core/utils/autogen/: langgraph_message_wrapper.py
src/core/utils/rag/: ai_search_unstructured.py  ai_search_unstructured_index.py  langchain_unstructured.py  langchain_unstructured_indexer.py  local_chroma.py
src/core_examples/: __init__.py
src/core_examples/config/: config.yml  config_logging.yml  config_nodes.yml
src/core_examples/config/layouts/: ai_search_adaptive_rag_config_graph.py  local_vectorstore_adaptive_rag_config_graph.py  oak_human_loop_config_graph.py  simple_oak_config_graph.py
src/core_examples/constants/: __init__.py
src/core_examples/models/basetools/: langchaintoolproperty.py
src/core_examples/models/stategraph/: ragstategraph.py
src/core_examples/utils/: blob_storage.py  common.py  config_loader.py  key_vault.py  logger.py
src/core_examples/utils/ollama/: ollama_wsl_proxy.py
src/core_examples/utils/rag/: ai_search_unstructured_indexer.py  langchain_unstructured_indexer.py  local_chroma.py  processing.py
src/frank/: __init__.py  workflow_builder.py
src/frank/components/tools/: dominate_pokemon_tool.py  get_evolution_tool.py  random_movements_tool.py
src/frank/config/: config.yml  config_nodes.yml
src/frank/config/layouts/: adaptative_rag_config_graph.py  oak_human_loop_config_graph.py  simple_oak_config_graph.py
src/frank/constants/: __init__.py
src/frank/entity/: edge.py  graph_layout.py  node.py  runnable_builder.py  statehandler.py
src/frank/entity/models/: stategraph.py
src/frank/managers/: edge_manager.py  node_manager.py
src/frank/utils/: common.py  logger.py  type_vars.py
src/frank/utils/autogen/: langgraph_message_wrapper.py
src/frank/utils/rag/: processing.py  unstructured.py  unstructured_no_async.py
src/frankstate/: __init__.py  workflow_builder.py
src/frankstate/entity/: __init__.py  edge.py  graph_layout.py  node.py  runnable_builder.py  statehandler.py
src/frankstate/managers/: __init__.py  edge_manager.py  node_manager.py
src/services/: __init__.py  llm.py  vector_db.py
src/services/ai_foundry/: llm.py
src/services/foundry/: llms.py
src/services/functions/: Dockerfile  function_app.py  host.json
src/services/functions/get_evolution_mcptool/: function.py  orchestrator.py  properties.py
src/services/functions/indexer_pokeseriex_eventgrid/: function.py  orchestrator.py
src/services/mcp/: server_adaptative_rag.py  server_oaklang_agent.py
tests/: __init__.py
tests/support/: core_doubles.py
tests/support/frank_doubles/: __init__.py  fake.py  spy.py  stub.py
tests/support/frankstate_doubles/: builders.py  fake.py  layouts.py  stub.py
tests/unit_test/: test_ai_search_index_manager.py  test_llm_services.py  test_oaklang_agent.py  test_output_paths.py  test_simple_oak_config_graph.py
tests/unit_test/core/: test_simple_oak_config_graph.py
tests/unit_test/frank/: test_edge_manager.py  test_graph_layout.py  test_node_manager.py  test_statehandler_and_runnable_builder.py  test_workflow_builder_integration.py
tests/unit_test/frankstate/: test_edge_manager.py  test_graph_layout.py  test_node_manager.py  test_runnable_builder.py  test_statehandler.py  test_statehandler_and_runnable_builder.py  test_workflow_builder_integration.py
(+100 files in other folders)
