[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "frank"
version = "0.4.0"
description = "Frank brings order and helps you build complex LLM workflows using scalable, testable, and reusable components."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12.3"
authors = [
    { name = "eiingeeel", email = "aangel.maragones@outlook.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["LLM", "azure", "langgraph", "langchain", "azure-ai-foundry", "unstructured", "multimodal"]

[project.urls]
homepage = "https://github.com/eiingeeel/frankenst-ai"
issues = "https://github.com/eiingeeel/frankenst-ai/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["frank", "frank.*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests/unit_test", "tests/integration_test"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-ra"
# `tests/unit_test/frank` contains the Frankenst-AI patterns suite.
# `tests/unit_test/core` contains example/reference tests for layouts and
# runnable builders built on top of the Frankenst-AI patterns.
# `tests/integration_test` contains smoke coverage for compiled workflows and
# packaging-adjacent execution flows that should run in the default suite.
markers = [
    "unit: fast Frankenst-AI contract tests",
    "integration: compiled workflows and external services (e.g., FastAPI , Microsoft Foundry)",
]