[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "frankstate"
version = "0.1.1"
description = "Frank brings order and helps you build complex LLM workflows using scalable, testable, and reusable components."
license = "MIT"
readme = { file = "README-pypi.md", content-type = "text/markdown" }
requires-python = ">=3.12.3"
authors = [
    { name = "eiingeeel", email = "aangel.maragones@outlook.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords = ["LLM", "azure", "langgraph", "langchain", "azure-ai-foundry", "unstructured", "multimodal"]

[project.urls]
homepage = "https://github.com/eiingeeel/frankenst-ai"
changelog = "https://github.com/eiingeeel/frankenst-ai/blob/main/CHANGELOG.md"
issues = "https://github.com/eiingeeel/frankenst-ai/issues"
repository = "https://github.com/eiingeeel/frankenst-ai"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-frankstate-core.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
examples = { file = ["requirements-examples.txt"] }
dev = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["frankstate", "frankstate.*"]
namespaces = false
# The published core wheel intentionally contains only `frankstate`.
# `core_examples` remains the documented reference package of this repository.

[tool.pytest.ini_options]
testpaths = ["tests/unit_test", "tests/integration_test"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-ra"
# `tests/unit_test/frankstate` contains the Frankstate patterns suite.
# `tests/unit_test/core_examples` contains example/reference tests for layouts and
# runnable builders built on top of the Frankenst-AI patterns.
# `tests/integration_test` contains smoke coverage for compiled workflows and
# packaging-adjacent execution flows that should run in the default suite.
markers = [
    "unit: fast Frankenst-AI contract tests",
    "integration: compiled workflows and external services (e.g., FastAPI , Microsoft Foundry)",
]